# zivyar-cockpit

./: .gitignore  DESIGN.md  README.md  SESSION_CONTEXT.md  opencode_doc.json
.github/: copilot-instructions.md
.github/workflows/: apply-migrations.yml
apps/cockpit-spider/: .env.example  build.zig  build.zig.zon  spider.config.zig
apps/cockpit-spider/public/css/: app.css
apps/cockpit-spider/public/js/: runtime-actions.js  runtime-live-status.js  runtime-workspaces-live.js  war-room-live.js  workspaces-new.js
apps/cockpit-spider/src/: main.zig
apps/cockpit-spider/src/core/: mod.zig
apps/cockpit-spider/src/features/: mod.zig
apps/cockpit-spider/src/routes/: warroom_api.zig
apps/cockpit-spider/src/services/: mission_orchestrator.zig
apps/cockpit-spider/src/shared/: helpers.zig
apps/desktop-tauri/: README.md  package-lock.json  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/desktop-tauri/ui-placeholder/: index.html
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEVELOPMENT_CONTINUATION_GUIDE.md  MISSION_ENGINE_STATUS.md  ROADMAP.md
docs/DECISIONS/: 0001-stack.md  0002-runtime-workspace.md
docs/reference/: SKILL.md  SKILL_ZIG_016_APIS.md
infra/compose/: docker-compose.local.yml
infra/docker/opencode-runtime/: Dockerfile  README.md
patches/spider-0.4.0/: README.md  app.zig.patch
scripts/: bootstrap.md  ensure-local-postgres.sh
tests/integration/: graphify.test.sh
(+113 files in other folders)
