[package]
name = "zivyar-cockpit"
version = "0.1.0"
description = "Desktop shell for Zivyar Cockpit"
authors = ["Darlecio Almeida"]
edition = "2021"

[lib]
name = "zivyar_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
